[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoxte"
version = "0.1.0"
description = ""
authors = [
    { name="Nicholas Kuechel", email="njkuechel@protonmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "astroquery >= 0.4.7.dev8479",
    "astropy >= 5.2.2",
    "wget >= 3.2",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.0",
    "pytest-cov >= 3.0.0",
    "flake8 >= 6.0.0",
]

[tool.setuptools]
packages = ["autoxte"]

[project.scripts]
